# building-in-the-open

./: .bito.yaml  .gitignore  .justfile  .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  package.json
.bus-factor/: 2026-02-07-103302-phase5-complete.md  2026-02-07-134655-bito-lint-extraction.md  2026-02-07-initial-plugin-implementation.md  2026-02-08-1845-releases-docs-skill-testing.md  2026-02-09-012956-bito-lint-cd-failures.md  2026-02-09-1827-bito-lint-cd-fixes.md  2026-02-10-2330-pluggable-tokenizers.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/: coda.yml
.github/workflows/: notify-marketplace.yml  skill-test.yml
.handoffs/: 2026-02-07-101425-phase4-complete.md  2026-02-07-initial-plugin-implementation.md  2026-03-02-060941-release-prep-skills-overhaul.md  2026-03-06-0019-v1.0.0-release.md  2026-03-25-2234-skill-tuning-and-bito-rename.md
agents/: editorial-reviewer.md
crates/bito-lint/: Cargo.toml
crates/bito-lint/src/: completeness.rs  main.rs  readability.rs  tokens.rs
defaults/: bito.yaml
docs/: installation.md  quickstart.md
docs/decisions/: 0002-tone-firewall-on-commit-path-not-writing-path.md  (+5 more)
hooks/: README.md  check-bito-lint.sh  check-bito.sh  check-docs-on-write.sh  hooks.json  pre-commit-docs  scaffold-config.sh
personas/: context-curator.md  doc-writer.md  marketing-copywriter.md  technical-writer.md
templates/: adr.md  design-doc.md  handoff.md
test/: calibrate-tokens.sh  calibration-report-2026-02-10.md  calibration-report-2026-03-01.md  run-skill-test.sh  run-suite.sh  thresholds.toml
(+26 files in other folders)
