[package]
name = "bito-lint"
version = "0.1.0"
description = "Quality gate tooling for building-in-the-open artifacts"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
tiktoken-rs = "0.9"
anyhow = "1"
